sorting padding issue out on mobile devices which is creating too much white space to the left and right.

--- a/assets/scss/index.scss
+++ b/assets/scss/index.scss
@@ -8,7 +8,8 @@
 
     &-article {
         text-align: center;
-        padding: 0 100px 25px 100px;
+        padding: 0 46px 25px 46px;
+        @media screen and (min-width: 768px) {padding: 0 100px 25px 100px;}
     }
 }
 
